syntax = "proto3";

package proto;

option go_package = "example.com/golang-grpc-api/proto";

service ItemService {
  rpc GetItem (ItemRequest) returns (ItemResponse);
}

message ItemRequest {
  string id = 1;
}

message ItemResponse {
  string id = 1;
  string name = 2;
  string description = 3;
}